# HappyRobot-FDE

./: .gitignore  AGENTS.md  README.md
api/: README.md  pyproject.toml
api/src/loads_api/: __init__.py  __main__.py  config.py  main.py  supabase.py
dashboard/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.module.css  App.tsx  index.css  index.tsx
