[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "happyrobot-api"
version = "0.1.0"
description = "FastAPI backend for HappyRobot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "supabase>=2.4.0,<3.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
packages = ["loads_api"]

[project.scripts]
dev-server = "loads_api.__main__:run"
